--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XinChao</title>
+    <title>hello</title>
 </head>
 <body>
     <h1 style="position:absolute; left:220px; top:175px;">Do you love me?</h1> <br> <br>
@@ -20,6 +20,7 @@
             document.getElementById("button").style.left = x + `px`
             document.getElementById("button").style.top = y + `px`
         }
+        
     </script>
 </body>
 </html>
